<resources>
    <string name="app_name">UniClubz</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="tab_text_1">Basic Info</string>
    <string name="tab_text_2">Universities</string>
    <string name="tab_text_3">Contact Information</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="university_affiliation">University Affiliation</string>
    <string name="university">University</string>
    <string name="student_id">Student ID</string>
    <string name="study_level">Study Level</string>
    <string name="add_university">Add University</string>
    <string name="university_email">University Email</string>
    <string name="lorem">Labore sunt veniam amet est.
Minim nisi dolor eu ad incididunt
cillum elit ex ut. Dolore exercitation
nulla tempor consequat aliquip
occaecat. Nisi id ipsum irure aute.
Deserunt sit aute irure quis nulla
eu consequat fugiat Lorem sunt
magna et consequat labore.
Laboris incididunt id Lorem est
duis deserunt nisi dolore eiusmod
culpa exercitation consectetur.
</string>
    <string name="my_clubs">My Clubs</string>
    <string name="club_name">Club Name</string>
    <string name="uni_name">Uni Name</string>
    <string name="you_are_an_admin_of_this_club">You are an Admin of this club</string>
    <string name="join">Join</string>
    <string name="events">Events</string>
    <string name="blood_donations">Blood Donations</string>
    <string name="add_events">Add Events</string>
    <string name="donation_post">Donation Post</string>
    <string name="add_member">Add Member</string>
    <string name="add_admin">Add Admin</string>
    <string name="club_image">Club image</string>

</resources>