<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".View.ClubViewActivity">

    <ImageView
        android:id="@+id/cvimg"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/club2"
        android:contentDescription="@string/club_image" />

    <TextView
        android:id="@+id/clubname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cvimg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/club_name"
        android:textSize="30sp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/uniname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/clubname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/uni_name"
        android:textSize="20sp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/uniname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/you_are_an_admin_of_this_club"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/themered" />
    <TextView
        android:id="@+id/join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/join"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:visibility="gone"
        android:textColor="@color/themered" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:orientation="horizontal">

        <Button
            android:id="@+id/eventbtn"
            style="@style/card_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/roundbutton"
            android:onClick="toevents"
            android:text="@string/events" />

        <Button
            android:id="@+id/bdbtn"
            style="@style/card_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/roundbutton"
            android:onClick="tobd"
            android:text="@string/blood_donations" />

        <Button
            android:id="@+id/addevntbtn"
            style="@style/card_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/roundbutton"
            android:onClick="addevents"
            android:text="@string/add_events" />

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:orientation="horizontal">

        <Button
            android:id="@+id/addbd"
            style="@style/card_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/roundbutton"
            android:onClick="adddonation"
            android:text="@string/donation_post" />

        <Button
            android:id="@+id/addmem"
            style="@style/card_button"
            android:layout_width="100dp"
            android:layout_height="100dp"

            android:background="@drawable/roundbutton"
            android:onClick="addmem"
            android:text="@string/add_member" />

        <Button
            android:id="@+id/addadmin"
            style="@style/card_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/roundbutton"
            android:onClick="addadmin"
            android:text="@string/add_admin" />

      </LinearLayout>

    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>